cros: Stop forcing off display when lid events are received

Changes:
Stop forcing off display when lid events are received

BUG=711033
TEST=added test coverage, also manually test on device

Review-Url: https://codereview.chromium.org/2815453007
Cr-Commit-Position: refs/heads/master@{#464469}

Former-commit-id: 1360898e06a4c3505237ccf3aa9425056e9e4af6