chromeos/dbus/fake_power_manager_client.h
@@ -42,8 +42,6 @@ class CHROMEOS_EXPORT FakePowerManagerClient : public PowerManagerClient {
   int num_set_backlights_forced_off_calls() const {
     return num_set_backlights_forced_off_calls_;
   }
-
-  void set_lid_state(LidState state) { lid_state_ = state; }
   void set_tablet_mode(TabletMode mode) { tablet_mode_ = mode; }
 
   // PowerManagerClient overrides
@@ -92,6 +90,9 @@ class CHROMEOS_EXPORT FakePowerManagerClient : public PowerManagerClient {
 
   // Notifies observers that the power button has been pressed or released.
   void SendPowerButtonEvent(bool down, const base::TimeTicks& timestamp);
+
+  // Sets |lid_state_| and notifies |observers_| about the change.
+  void SetLidState(LidState state, const base::TimeTicks& timestamp);
 
   // Updates |props_| and notifies observers of its changes.
   void UpdatePowerProperties(
